keycloak/keycloak-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
  name: keycloak-admin-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.localhost
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - '*.localhost'
