keycloak/keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: default/client-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "2"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/session-cookie-path: /realms
  name: keycloak-auth-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: auth.localhost
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
            path: /realms
            pathType: Prefix
          - backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
            path: /resources
            pathType: Prefix
  tls:
    - hosts:
        - '*.localhost'
